--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ h1 {
     border: 2 px green;
     grid-column: 2 / 3; 
     grid-row: 2 / 3;
-    background-image: url(img/xmas_tree.png) no-repeat;
+    background-image: url();
+    background-repeat: no-repeat;
 }
 
 a {
