Revert "added new xmas tree img"
This reverts commit 4bd4932755ab76bdde55cf1f55cba54dc66888a0.

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h1 {
     border: 2 px green;
     grid-column: 2 / 3; 
     grid-row: 2 / 3;
-    background-image: url();
+    background-image: url(img/xmas_tree.gif);
     background-repeat: no-repeat;
 }
 
@@ -118,5 +118,5 @@ li:nth-child(8) {
 
 li:nth-child(9) {
     grid-column: 1 / 2;
-    grid-row: 11 / 12;
+    grid-row: 10 / 11;
 }
